fixed list title alignment. working on modal

--- a/public/style.css
+++ b/public/style.css
@@ -44,32 +44,32 @@ a {
 }
 
 .list {
-  flex: 0 4 0%;
+  flex: 0 1 10%;
   display: flex;
-  margin: 2px;
-  padding: 10%;
+  margin: 0px;
+  padding: 20px;
   border: 1px solid #dadada;
-  border-radius: 2px;
-  background-color: #fff;
+  border-radius: 1px;
+  background-color: #fff;\
 }
 
 .listContent {
   flex: 1 1 80%;
   margin-left: 0px;
-
+  justify-content: flex-start;
 }
 
-.listName {
+.listContent .listName {
   font-weight:bold;
-  margin: 0;
-  text-align: center;
+  text-align: left;
   color: #2b222b;
   font-size: 200%;
+  margin-top: 2px;
 }
 
 .makeList {
   margin: 5px;
-  text-align: center;
+  text-align: left;
   color: #2b222b;
   font-size: 100%;
 }
@@ -98,4 +98,83 @@ a {
   border-radius: 33px;
   font-size: 34px;
   background-color: #dba4a4;
+}
+
+#modalBackdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+#createListModal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1010;
+  overflow: scroll;
+}
+
+.hidden {
+  display: none;
+}
+
+.modalWindow {
+  width: auto;
+  max-width: 600px;
+  min-width: 350px;
+  min-height: 300px;
+  margin: 40px auto;
+  background-color: #fff;
+  border-radius: 15px;
+}
+
+.modalHeader {
+  position: relative;
+  padding: 10px 20px;
+}
+
+.modalHeader h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+.closeModal {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 24px;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modalBody {
+  padding: 20px;
+}
+
+.listNameElement {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.listNameElement label {
+  font-weight: 600;
+  flex: 1 75px;
+  margin-right: 10px;
+}
+
+.listNameElement textarea {
+  flex: 6 200px;
+  padding: 8px;
+  font-size: 20px;
+  border: 1px solid #aaa;
 }
